syntax = "proto3";
option java_multiple_files = true;
package com.cwrr.user_management;

message Error {
    string code = 1;
    string entity = 2;
    string message = 3;
}

message CreateUserRequest {
    string first_name = 1;
    string last_name = 2;
    string email= 3;
    string password = 4;
    string created_at = 5;
}

message CreateUserResponse {
    bool success = 1;
    Error error = 2;
    int32 user_id = 3;
}


service UserManagementService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse); 
}